Fixed primary-content alignment issues in TechHQ Software section
- Not sure if this goofs things up elsewhere yet

--- a/scss/04-components/_mainsection.scss
+++ b/scss/04-components/_mainsection.scss
@@ -190,10 +190,12 @@
   .primary-content {
     grid-area: pContent;
 
+    .card:first-child {
+      margin-top: 0;
+    }
+
     // the idea is for readability as far as the ch unit
-    // WHY the margin? ...
     p {
-      // margin: 1rem auto;
       max-width: 72ch;
     }
 
